--- a/src/React/Components/SideBar/ObjectInfo/ObjectInfo.module.scss
+++ b/src/React/Components/SideBar/ObjectInfo/ObjectInfo.module.scss
@@ -25,4 +25,5 @@
     padding: 0.75em 0;
     display: flex;
     flex-direction: column;
+    gap: 0.5em;
 }
